--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,7 +7,8 @@ jobs:
   
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
-    environment: test
+    environment: test1
+    environment: test2
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
