--- a/.github/workflows/Call-a-reusable-workflow.yml
+++ b/.github/workflows/Call-a-reusable-workflow.yml
@@ -8,13 +8,13 @@ on:
 
 jobs:
   call-workflow:
-    uses: octo-org/example-repo/.github/workflows/workflow-A.yml@v1
+    uses: codeclubbentleigh/hello-action/.github/workflows/workflow-A.yml@v1
 
   call-workflow-passing-data:
     permissions:
       contents: read
       pull-requests: write
-    uses: octo-org/example-repo/.github/workflows/workflow-B.yml@main
+    uses: codeclubbentleigh/hello-action/.github/workflows/workflow-B.yml@main
     with:
       config-path: .github/labeler.yml
     secrets:
