--- a/.github/workflows/Call-a-reusable-workflow.yml
+++ b/.github/workflows/Call-a-reusable-workflow.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  call-workflow:
-    uses: codeclubbentleigh/hello-action/.github/workflows/workflow-A.yml@v1
+  #call-workflow:
+    #uses: codeclubbentleigh/hello-action/.github/workflows/workflow-A.yml@v1
 
   call-workflow-passing-data:
     permissions:
