--- a/.github/workflows/workflow-B.yml
+++ b/.github/workflows/workflow-B.yml
@@ -20,3 +20,9 @@ jobs:
         configuration-path: ${{ inputs.config-path }}
     - name: Send greeting
       run: echo "Hello ${{ inputs.name }}"
+      
+# Runs a set of commands using the runners shell
+    - name: Run a multi-line script
+      run: |
+        echo Add other actions to build,
+        echo test, and deploy your project.
