--- a/.github/workflows/workflow-B.yml
+++ b/.github/workflows/workflow-B.yml
@@ -19,7 +19,7 @@ jobs:
         repo-token: ${{ secrets.token }}
         configuration-path: ${{ inputs.config-path }}
     - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+      run: echo "Hello ${{ inputs.config-path }}"
       
 # Runs a set of commands using the runners shell
     - name: Run a multi-line script
