--- a/.github/workflows/Call-a-reusable-workflow-dev.yml
+++ b/.github/workflows/Call-a-reusable-workflow-dev.yml
@@ -14,7 +14,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-    uses: codeclubbentleigh/hello-action/.github/workflows/workflow-B.yml@dev
+    uses: codeclubbentleigh/hello-action/.github/workflows/workflow-B.yml@feature
     with:
       name: development
       config-path: .github/labeler.yml
