--- a/.github/workflows/Call-a-reusable-workflow.yml
+++ b/.github/workflows/Call-a-reusable-workflow.yml
@@ -14,7 +14,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-    uses: codeclubbentleigh/hello-action/.github/workflows/workflow-B.yml@main
+    uses: codeclubbentleigh/hello-action/.github/workflows/workflow-B.yml@feature
     with:
       config-path: .github/labeler.yml
     secrets:
